# sheepit-client-rs

./: Cargo.toml  args.txt
src/: HwInfo.rs  ServerConf.rs  Work.rs  conf.rs  defs.rs  files.rs  fmd5.rs  global.rs  job.rs  main.rs  net.rs  process.rs  serverCon.rs  tui.rs  utils.rs
