[package]
name = "sheepit-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde-xml-rs = "0.6.0"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11.24", features = ["blocking", "cookies"] }
sysinfo = "0.30.5"
machineid-rs = "1.2.4"
lazy_static = "1.4.0"
raw-cpuid = "11.0.1"
rustc_version = "0.4.0"