[package]
name = "sheepit-client-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde-xml-rs = "0.6.0"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11.24", features = ["cookies", "deflate", "gzip", "default-tls", "multipart", "stream"] }
sysinfo = "0.30.5"
machineid-rs = "1.2.4"
lazy_static = "1.4.0"
raw-cpuid = "11.0.1"
rustc_version = "0.4.0"
rand = "0.8.5"
mime = "0.3.17"
futures-util = "0.3.29"
md5 = "0.7.0"
indoc = "2.0.4"
tokio-process = "0.2.5"
defer = "0.2.1"
urlencoding = "2.1.3"
regex = "1.10.3"
zip = "0.6.6"
ratatui = "0.26.1"
crossterm = "0.27.0"
anyhow = "1.0.80"